<resources>
    <string name="app_name">Kitap Okuma Takip</string>
    <string name="addBook">Kitap Ekle</string>
    <string name="addHistory">Okuma Kaydı Ekle</string>

    <string name="title">Başlık</string>
    <string name="totalPage">Toplam Sayfa</string>
    <string name="description">Açıklama</string>
    <string name="author">Yazar</string>

    <string name="selectImage">Resim Seçiniz</string>

    <string name="title_activity_book_info">Kitap Bilgisi</string>
    <string name="addPhoto">Fotoğraf Ekleyin</string>
    <array name="photoSources">
        <item>Galeriden</item>
        <item>Kameradan</item>
    </array>
    <string name="needPermission">İzin Gerekli</string>
    <string name="permissionMessage">
        Bu uygulamanın istediğiniz özelliği kullanabilmesi için izninize ihtiyacı var. Ayarlardan izin verebilirsiniz.
    </string>
    <string name="goToSettings">Ayarlara Git</string>

    <string name="ok">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="defaultErrorMessage">Bir hata oluştu! Lütfen uygulamayı kapatıp açarak tekrar deneyin.</string>
    <string name="bookCover">Kitap Kapağı</string>
    <string name="save">Kaydet</string>

    <string name="successCreateBookMessage">Kitap Başarıyla Eklendi</string>
    <string name="successUpdateBookMessage">Kitap Başarıyla Güncellendi</string>
    <string name="title_activity_book_process">Kitap Takibi</string>

    <string name="currentPage">Bulunduğunuz Sayfa</string>
    <string name="pleaseSelectBook">Lütfen bir kitap seçiniz</string>
    <string name="bookSelection">Kitap Seçimi</string>

    <array name="book_menu">
        <item>Güncelle</item>
        <item>Okuma Kaydı Ekle
        </item>
    </array>
</resources>
